--- a/quotes/templates/quotes/base.html
+++ b/quotes/templates/quotes/base.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Quotes App</h1>
         <nav>
-            <a href="/quotes/">Home</a>
+            <a href="/quotes">Home</a>
             <a href="/quotes/quote">New Quote</a>
             <a href="/quotes/show_all">Show All</a>
             <a href="/quotes/about">About</a>
